# mycobot

./: .codecov.yml  .codespell_words  .gitignore  .pre-commit-config.yaml  README.md  upstream.repos
.github/workflows/: ci.yaml  format.yaml
mycobot/: CMakeLists.txt  package.xml
mycobot/bringup/: wiggle.cpp
mycobot/include/mycobot/: bytearray.hpp  command.hpp  detect.hpp  mycobot.hpp  process_received.hpp  protocol_code.hpp  serialize.hpp
mycobot/src/: bytearray.cpp  command.cpp  detect.cpp  mycobot.cpp  process_received.cpp  serialize.cpp
mycobot/test/: test_process_received.cpp  test_serialize.cpp
mycobot_280_description/: CMakeLists.txt  package.xml
mycobot_280_description/config/: controllers.yaml  initial_positions.yaml  kinematics.yaml  ros_controllers.yaml
mycobot_280_description/config/mycobot_280/: default_kinematics.yaml  joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
mycobot_280_description/launch/: move_group.launch.py  view_robot.launch.py
mycobot_280_description/meshes/mycobot_280/: base.dae  link4.dae
mycobot_280_description/rviz/: view_robot.rviz
mycobot_280_description/urdf/: mycobot_280.ros2_control.xacro  mycobot_280.srdf.xacro  mycobot_280.urdf.xacro  mycobot_280_macro.xacro  mycobot_urdf.urdf
mycobot_280_description/urdf/inc/: mycobot_common.xacro
mycobot_hardware_interface/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
mycobot_hardware_interface/include/mycobot_hardware_interface/: hardware_interface.hpp
mycobot_hardware_interface/src/: hardware_interface.cpp
