<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mycobot</name>
  <version>0.0.0</version>
  <description>C++ Interface for MyCobot 280</description>
  <maintainer email="squirrel428@pm.me">Tyler Weaver</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fmt</depend>
  <depend>fp</depend>
  <depend>range-v3</depend>
  <depend>serial</depend>

  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>catch2</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
