<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mycobot_280_description</name>
  <version>0.0.1</version>
  <description>URDF description for the MyCobot 280 robot arm</description>
  <author email="squirrel428@pm.me">Tyler Weaver</author>
  <maintainer email="squirrel428@pm.me">Tyler Weaver</maintainer>
  <license>BSD</license>

  <url type="bugtracker">https://github.com/tylerjw/mycobot/issues</url>
  <url type="repository">https://github.com/tylerjw/mycobot</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>mycobot_hardware_interface</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>backward_ros</exec_depend>
  <exec_depend>ompl</exec_depend>
  <exec_depend>moveit</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
