<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mycobot_hardware_interface</name>
  <version>0.0.0</version>
  <description>ros2_control Hardware Interface for MyCobot 280</description>
  <maintainer email="squirrel428@pm.me">Tyler Weaver</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fmt</depend>
  <depend>fp</depend>
  <depend>hardware_interface</depend>
  <depend>mycobot</depend>
  <depend>pluginlib</depend>
  <depend>range-v3</depend>
  <depend>rclcpp</depend>
  <depend>serial</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
